--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trivia1</title>
+    <title>Trivia</title>
     <link rel="stylesheet" href="css/styles.css"> <!-- Enlaza tu archivo CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -36,7 +36,7 @@
 
     <!-- Pantallas de las distintas opciones -->
     <div class="screen" id="telefonos">
-        <h2>Pantalla de Teléfonos</h2>
+        <h2>Pantalla de Teléfonooos</h2>
         <p>Contenido sobre productos de teléfonos.</p>
         <button onclick="goBack()">Volver</button>
     </div>
