--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <!-- Pantalla inicial con las opciones -->
     <div id="main-screen">
-        <div class="segment" onclick="showScreen('tecnologia')">Tecnología</div>
+        <div class="segment" onclick="showScreen('tecnologia')">Tecnología1</div>
         <div class="segment" onclick="showScreen('accesorios')">Accesorios</div>
         <div class="segment" onclick="showScreen('telefonos')">Teléfonos</div>
         <div class="segment" onclick="showScreen('oficina')">Para la Ofi</div>
@@ -36,7 +36,7 @@
 
     <!-- Pantallas de las distintas opciones -->
     <div class="screen" id="telefonos">
-        <h2>Pantalla de Teléfonooos</h2>
+        <h2>Pantalla de Teléfonos</h2>
         <p>Contenido sobre productos de teléfonos.</p>
         <button onclick="goBack()">Volver</button>
     </div>
