--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trivia1</title>
+    <title>Trivia</title>
     <link rel="stylesheet" href="css/styles.css"> <!-- Enlaza tu archivo CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -28,7 +28,7 @@
 
     <!-- Pantalla inicial con las opciones -->
     <div id="main-screen">
-        <div class="segment" onclick="showScreen('tecnologia')">Tecnología1</div>
+        <div class="segment" onclick="showScreen('tecnologia')">Tecnología</div>
         <div class="segment" onclick="showScreen('accesorios')">Accesorios</div>
         <div class="segment" onclick="showScreen('telefonos')">Teléfonos</div>
         <div class="segment" onclick="showScreen('oficina')">Para la Ofi</div>
